--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>A-Frame City</title>
     <meta name="description" content="A-Frame City">
+    <script src="lib/nunjucks-v2.3.0.min.js"></script>
     <script src="lib/aframe.min.js"></script>
     <script src="lib/aframe-template-component.min.js"></script>
     <script src="components/geometry-merge.js"></script>
@@ -13,30 +14,33 @@
   <body>
     <a-scene fog="near: 1; far: 15" stats>
       <a-assets>
-        <a-mixin id="street" geometry="primitive: box; depth: 20; height: 0.1; width: 10"
+        <a-mixin id="rotated" rotation="0 90 0"></a-mixin>
+        <a-mixin id="street" geometry="primitive: box; depth: 50; height: 0.1; width: 10"
                              geometry-merge="city"
                              material="shader: street"></a-mixin>
+        <a-mixin id="connector" geometry="depth: 25"></a-mixin>
+        <a-mixin id="intersection" geometry="primitive: box; depth: 10; height: 0.1; width: 10"
+                             geometry-merge="city"
+                             material="shader: flat; color: #AAA"
+                             rotation="0 90 0"></a-mixin>
 
         <script id="streets" type="text/x-nunjucks-template">
-          // City block of streets. #
-          {% for x in range(10) %}
-            {% for z in range(10) %}
-              <a-entity position="{{ x * blocksize }} 0 {{ z * blocksize }}">
-                <a-entity mixin="street" position="-15 0 0"></a-entity>
-                <a-entity mixin="street" position="15 0 0"></a-entity>
-                <a-entity mixin="street" position="0 0 -15" rotation="0 90 0"
-                                         geometry="depth: 50"></a-entity>
-                <a-entity mixin="street" position="0 0 15" rotation="0 90 0"
-                                         geometry="depth: 50"></a-entity>
-              </a-entity>
+          {% for x in range(xnum) %}
+            {% for z in range(znum) %}
+              <a-entity position="{{ x * 100 }} 0 {{ z * 100 }}"
+                        template="src: templates/street-block.template; type: nunjucks"
+                        data-streetlength="50" data-streetwidth="10"></a-entity>
             {% endfor %}
           {% endfor %}
         </script>
       </a-assets>
 
-      <a-sky material="shader: sky"></a-sky>
+      <a-entity template="src: #streets" data-xnum="10" data-znum="10"></a-entity>
 
-      <a-entity template="src: #streets" data-blocksize="50"></a-entity>
+      <a-sky material="shader: sky; sunPosition: -1 0.25 0"></a-sky>
+      <a-entity position="500 10 500">
+        <a-camera></a-camera>
+      </a-entity>
     </a-scene>
   </body>
 </html>
