--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="shaders/street.js"></script>
   </head>
   <body>
-    <a-scene fog="near: 1; far: 15" stats>
+    <a-scene stats>
       <a-assets>
       </a-assets>
 
